<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:textSize="18.0sp"
        android:textColor="#ff34495e"
        android:paddingLeft="16.0dip"
        android:paddingRight="16.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/advanced"
        fontPath="fonts/rubik_medium.ttf" />

    <androidx.cardview.widget.CardView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16.0dip"
        android:layout_marginTop="10.0dip"
        android:layout_marginRight="16.0dip"
        android:layout_marginBottom="19.0dip"
        app:cardCornerRadius="10.0dip"
        app:cardElevation="2.0dip">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:gravity="center"
                android:orientation="horizontal"
                android:id="@+id/llNotificationBar"
                android:padding="16.0dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:foreground="?android:selectableItemBackground">

                <LinearLayout
                    android:gravity="start|center"
                    android:orientation="vertical"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0">

                    <TextView
                        android:textSize="14.0sp"
                        android:textColor="#ff7f8c8d"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/notification_bar"
                        fontPath="fonts/rubik_medium.ttf" />

                    <TextView
                        android:textSize="12.0sp"
                        android:textColor="#ff95a5a6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4.0dip"
                        android:text="@string/notification_bar_description" />
                </LinearLayout>

                <androidx.appcompat.widget.SwitchCompat
                    android:theme="@style/AppTheme.DarkAccent"
                    android:id="@+id/switchNotificationBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <View
                android:background="@drawable/divider_settings"
                android:layout_width="fill_parent"
                android:layout_height="1.0dip"
                android:layout_marginStart="16.0dip"
                android:layout_marginEnd="16.0dip" />

            <LinearLayout
                android:gravity="center"
                android:orientation="horizontal"
                android:id="@+id/llOpenInstagram"
                android:padding="16.0dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:foreground="?android:selectableItemBackground">

                <LinearLayout
                    android:gravity="start|center"
                    android:orientation="vertical"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0">

                    <TextView
                        android:textSize="14.0sp"
                        android:textColor="#ff7f8c8d"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/open_instagram"
                        fontPath="fonts/rubik_medium.ttf" />

                    <TextView
                        android:textSize="12.0sp"
                        android:textColor="#ff95a5a6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4.0dip"
                        android:text="@string/open_instagram_description" />
                </LinearLayout>

                <androidx.appcompat.widget.SwitchCompat
                    android:theme="@style/AppTheme.DarkAccent"
                    android:id="@+id/switchOpenInstagram"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>