<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        fontPath="fonts/rubik_medium.ttf"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16.0dip"
        android:paddingTop="16.0dip"
        android:paddingRight="16.0dip"
        android:text="@string/general"
        android:textColor="#ff34495e"
        android:textSize="18.0sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16.0dip"
        android:layout_marginTop="10.0dip"
        android:layout_marginRight="16.0dip"
        android:layout_marginBottom="19.0dip"
        app:cardCornerRadius="10.0dip"
        app:cardElevation="2.0dip">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llStorageFolder"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:foreground="?android:selectableItemBackground"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="16.0dip">

                <LinearLayout
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:gravity="start|center"
                    android:orientation="vertical">

                    <TextView
                        fontPath="fonts/rubik_medium.ttf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/storage_folder"
                        android:textColor="#ff7f8c8d"
                        android:textSize="14.0sp" />

                    <TextView
                        android:id="@+id/txtStorageFolder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4.0dip"
                        android:textColor="#ff95a5a6"
                        android:textSize="12.0sp" />
                </LinearLayout>

                <ImageView
                    android:layout_width="24.0dip"
                    android:layout_height="24.0dip"
                    android:src="@drawable/ic_settings_arrow" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0dip"
                android:layout_marginStart="16.0dip"
                android:layout_marginEnd="16.0dip"
                android:background="@drawable/divider_settings" />

            <LinearLayout
                android:id="@+id/llLanguage"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:foreground="?android:selectableItemBackground"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="16.0dip">

                <LinearLayout
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:gravity="start|center"
                    android:orientation="vertical">

                    <TextView
                        fontPath="fonts/rubik_medium.ttf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/select_your_language"
                        android:textColor="#ff7f8c8d"
                        android:textSize="14.0sp" />

                    <TextView
                        android:id="@+id/txtLanguage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4.0dip"
                        android:textColor="#ff95a5a6"
                        android:textSize="12.0sp" />
                </LinearLayout>

                <ImageView
                    android:layout_width="24.0dip"
                    android:layout_height="24.0dip"
                    android:src="@drawable/ic_settings_arrow" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>